jlamontSC-test/src/objects/Club_Entity__c.object
<CustomObject>
    <fields>
        <fullName>Additional_State_s__c</fullName>
        <label>Additional State(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address_City__c</fullName>
        <label>Address: City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Postal_Code__c</fullName>
        <label>Address: Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_State__c</fullName>
        <label>Address: State</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Street__c</fullName>
        <label>Address: Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_in_AddUp__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This entity or team can create campaigns on AddUP.org</inlineHelpText>
        <label>Available in AddUp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Validations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Validations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Strategy_Global__c</fullName>
        <label>National Campaign Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>National_Campaign_Global__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Reporting_Attribute_Campaign_Strategy</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Safe_ID__c</fullName>
        <description>Case safe version of the Entity Id.  Created for support of FormAssembly forms.</description>
        <formula>CASESAFEID(Id)</formula>
        <label>Case Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Document_URL__c</fullName>
        <inlineHelpText>For teams with a charge, a link to a document or webpage stating that charge</inlineHelpText>
        <label>Charge Document URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Short description, if applicable</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EntityId__c</fullName>
        <externalId>true</externalId>
        <label>EntityId</label>
        <length>4</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Entity_Category__c</fullName>
        <label>Entity/Team Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Board</fullName>
                </value>
                <value>
                    <fullName>Conservation Dept</fullName>
                </value>
                <value>
                    <fullName>Foundation</fullName>
                </value>
                <value>
                    <fullName>Grassroots Network</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Outings</fullName>
                </value>
                <value>
                    <fullName>SSC</fullName>
                </value>
                <value>
                    <fullName>Volunteer or Local Entity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entity_Subtype__c</fullName>
        <label>Entity/Team Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Entity_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Campaign Leadership Team</fullName>
                </value>
                <value>
                    <fullName>Capacity Team</fullName>
                </value>
                <value>
                    <fullName>Charged Team</fullName>
                </value>
                <value>
                    <fullName>Committee</fullName>
                </value>
                <value>
                    <fullName>Communications Committee</fullName>
                </value>
                <value>
                    <fullName>Conservation Committee</fullName>
                </value>
                <value>
                    <fullName>Development Committee</fullName>
                </value>
                <value>
                    <fullName>Education Committee</fullName>
                </value>
                <value>
                    <fullName>Finance Committee</fullName>
                </value>
                <value>
                    <fullName>Geographic Team</fullName>
                </value>
                <value>
                    <fullName>Issues Committee</fullName>
                </value>
                <value>
                    <fullName>Legislative Committee</fullName>
                </value>
                <value>
                    <fullName>Local Campaign Community</fullName>
                </value>
                <value>
                    <fullName>Membership Committee</fullName>
                </value>
                <value>
                    <fullName>National Campaign Community</fullName>
                </value>
                <value>
                    <fullName>Nominations Committee</fullName>
                </value>
                <value>
                    <fullName>Other Committee</fullName>
                </value>
                <value>
                    <fullName>Outings Committee</fullName>
                </value>
                <value>
                    <fullName>Political Committee</fullName>
                </value>
                <value>
                    <fullName>Tactical Team</fullName>
                </value>
                <value>
                    <fullName>Uncharged Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entity_Type__c</fullName>
        <label>Entity/Team Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Entity_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Entity_Team_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Local_Grassroots_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local/Grassroots Campaign</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Local_Grassroots_Campaign__c.Club_Entity_Team__c</field>
                <operation>equals</operation>
                <valueField>$Source.Parent_Chapter__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Local_Grassroots_Campaign__c</referenceTo>
        <relationshipName>Club_Entities_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Local_Sub_Campaign_Global__c</fullName>
        <label>National Sub-Campaign</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Campaign_Strategy_Global__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Reporting_Attribute_Local_Campaign</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Managed_in_ANSEL__c</fullName>
        <description>Indicates that this Entity should be managed in ANSEL, not Salesforce, for the time being. Used in validation rules.</description>
        <formula>RecordType.Name = &apos;Club Entity&apos;</formula>
        <label>Managed in ANSEL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Tags_Global__c</fullName>
        <label>Marketing Tags</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Marketing_Tags</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>National_Campaign_Global__c</fullName>
        <label>National Campaign</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Reporting_Attribute_National_Campaign</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Newly_Activated_Outings_Email__c</fullName>
        <label>Newly Activated Outings Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Parent_Chapter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Chapter</description>
        <label>Parent Club Entity/Team</label>
        <referenceTo>Club_Entity__c</referenceTo>
        <relationshipLabel>Club Entities/Teams</relationshipLabel>
        <relationshipName>Club_Entities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Global__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Deactivated</fullName>
                </value>
                <value>
                    <fullName>Reorganizing</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tactic_Owner_Category_Global__c</fullName>
        <label>Tactic Owner Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Reporting_Attribute_Tactic_Owner_Catego</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tactic_Owner_Global__c</fullName>
        <label>Tactic Owner</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Tactic_Owner_Category_Global__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Reporting_Attribute_Tactic_Owner</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Board Advisory Committees</fullName>
                </value>
                <value>
                    <fullName>Activity Sections</fullName>
                </value>
                <value>
                    <fullName>Grassroot Network Teams</fullName>
                </value>
                <value>
                    <fullName>Board of Directors</fullName>
                </value>
                <value>
                    <fullName>Board Standing Committees</fullName>
                </value>
                <value>
                    <fullName>Board Task Forces</fullName>
                </value>
                <value>
                    <fullName>Campaign &amp; Program Teams</fullName>
                </value>
                <value>
                    <fullName>Canadian Chapter</fullName>
                </value>
                <value>
                    <fullName>Canadian Group</fullName>
                </value>
                <value>
                    <fullName>Committees of the Board</fullName>
                </value>
                <value>
                    <fullName>Campaign Committees</fullName>
                </value>
                <value>
                    <fullName>Chapter</fullName>
                </value>
                <value>
                    <fullName>Cons Initiative Committee</fullName>
                </value>
                <value>
                    <fullName>Sierra Club</fullName>
                </value>
                <value>
                    <fullName>Council of Club Leaders</fullName>
                </value>
                <value>
                    <fullName>Conservation Priority Task Forces</fullName>
                </value>
                <value>
                    <fullName>Campaign Steering Comm</fullName>
                </value>
                <value>
                    <fullName>Digital Innovations Project</fullName>
                </value>
                <value>
                    <fullName>Ecoregion</fullName>
                </value>
                <value>
                    <fullName>Field Office</fullName>
                </value>
                <value>
                    <fullName>TSCF Sierra Club Fdn</fullName>
                </value>
                <value>
                    <fullName>TSCF Committee</fullName>
                </value>
                <value>
                    <fullName>TSCF Board of Directors</fullName>
                </value>
                <value>
                    <fullName>Finance &amp; Risk Management Subcommittees</fullName>
                </value>
                <value>
                    <fullName>Governance Committee</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Inner City Outings Group</fullName>
                </value>
                <value>
                    <fullName>ICO Regional Steering Cmt</fullName>
                </value>
                <value>
                    <fullName>Coordinating Pairs</fullName>
                </value>
                <value>
                    <fullName>Local Committees</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Club Entity/Team</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Parent_Chapter__c</columns>
        <columns>EntityId__c</columns>
        <columns>Status__c</columns>
        <columns>Entity_Category__c</columns>
        <columns>Entity_Type__c</columns>
        <columns>Entity_Subtype__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Chapters</fullName>
        <columns>EntityId__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Address_Street__c</columns>
        <columns>Address_City__c</columns>
        <columns>Address_State__c</columns>
        <columns>Address_Postal_Code__c</columns>
        <columns>Available_in_AddUp__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Chapter</value>
        </filters>
        <label>Chapters</label>
    </listViews>
    <listViews>
        <fullName>Groups</fullName>
        <columns>EntityId__c</columns>
        <columns>Type__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Group</value>
        </filters>
        <label>Groups</label>
    </listViews>
    <nameField>
        <label>Club Entity/Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Club Entities/Teams</pluralLabel>
    <recordTypes>
        <fullName>Club_Entity</fullName>
        <active>true</active>
        <label>Club Entity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Team</fullName>
        <active>true</active>
        <label>Team</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Club_Entity_Must_Match_Tactic_Owner</fullName>
        <active>true</active>
        <description>Parent Club Entity must be of same type as the Tactic Owner chosen.</description>
        <errorConditionFormula>$Profile.Name &lt;&gt; &apos;System Administrator&apos;
&amp;&amp; $User.Alias &lt;&gt; &apos;ciron&apos; 
&amp;&amp; NOT(ISBLANK( Parent_Chapter__c )) 
&amp;&amp; 
( 
(ISPICKVAL(Tactic_Owner_Global__c, &apos;Inspiring Connections Outdoors&apos;) &amp;&amp; NOT(ISPICKVAL( Parent_Chapter__r.Entity_Category__c, &apos;Outings&apos;))) 
|| (ISPICKVAL(Tactic_Owner_Global__c, &apos;Activity Sections&apos;) &amp;&amp; NOT(ISPICKVAL( Parent_Chapter__r.Entity_Type__c, &apos;Activity Sections&apos;))) 
|| (ISPICKVAL(Tactic_Owner_Global__c, &apos;Chapter&apos;) &amp;&amp; NOT(ISPICKVAL( Parent_Chapter__r.Entity_Type__c, &apos;Chapter&apos;)) &amp;&amp; NOT(ISPICKVAL( Parent_Chapter__r.Entity_Type__c, &apos;Special Entity&apos;))) 
|| (ISPICKVAL(Tactic_Owner_Global__c, &apos;Group&apos;) &amp;&amp; NOT(ISPICKVAL( Parent_Chapter__r.Entity_Type__c, &apos;Group&apos;))) 
|| (ISPICKVAL(Tactic_Owner_Global__c, &apos;Sierra Student Coalition&apos;) &amp;&amp; NOT(ISPICKVAL( Parent_Chapter__r.Entity_Category__c, &apos;SSC&apos;)) &amp;&amp; NOT(ISPICKVAL( Parent_Chapter__r.Entity_Type__c, &apos;SSC&apos;))) 
)
&amp;&amp; Parent_Chapter__r.RecordType.DeveloperName &lt;&gt; &apos;Team&apos;</errorConditionFormula>
        <errorDisplayField>Parent_Chapter__c</errorDisplayField>
        <errorMessage>Parent Club Entity must be of same type as the Tactic Owner chosen.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Club_Entity_Required</fullName>
        <active>true</active>
        <description>Certain team types require the Club Entity lookup to be populated</description>
        <errorConditionFormula>$User.Alias &lt;&gt; &apos;ciron&apos; 
&amp;&amp; 
$Profile.Name &lt;&gt; &apos;System Administrator&apos; 
&amp;&amp; 
RecordType.DeveloperName = &apos;Team&apos;
&amp;&amp; 
ISPICKVAL(Entity_Category__c, &apos;Volunteer or Local Entity&apos;) 
&amp;&amp; 
(ISPICKVAL(Entity_Type__c, &apos;Local Committees&apos;) 
|| 
ISPICKVAL(Entity_Type__c, &apos;Organizing Teams&apos;)) 
&amp;&amp; 
ISBLANK(Parent_Chapter__c)</errorConditionFormula>
        <errorDisplayField>Parent_Chapter__c</errorDisplayField>
        <errorMessage>This type of team requires a parent entity or team.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Managed_in_ANSEL</fullName>
        <active>true</active>
        <description>Entity is managed in ANSEL for the time being and cannot be modified directly in Salesforce.</description>
        <errorConditionFormula>Bypass_Validations__c = false
&amp;&amp;
$User.Alias &lt;&gt; &apos;ciron&apos; 
&amp;&amp; 
$Profile.Name &lt;&gt; &apos;System Administrator&apos; 
&amp;&amp; 
RecordType.DeveloperName = &apos;Club_Entity&apos;
&amp;&amp;
OR(
ISCHANGED(Name),
ISCHANGED(Description__c),
ISCHANGED(Status__c),
ISCHANGED(EntityId__c),
ISCHANGED(Type__c)
)</errorConditionFormula>
        <errorMessage>Some Club Entity fields cannot be modified directly in Salesforce.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tactic_Owner_Requires_Parent_Club_Entity</fullName>
        <active>true</active>
        <description>Certain tactic owners require Parent Club Entity lookup to be populated</description>
        <errorConditionFormula>$Profile.Name &lt;&gt; &apos;System Administrator&apos;
&amp;&amp; $User.Alias &lt;&gt; &apos;ciron&apos; 
&amp;&amp; ( 
ISPICKVAL(Tactic_Owner_Global__c, &apos;Inspiring Connections Outdoors&apos;) 
|| ISPICKVAL(Tactic_Owner_Global__c, &apos;Activity Sections&apos;) 
|| ISPICKVAL(Tactic_Owner_Global__c, &apos;Chapter&apos;) 
|| ISPICKVAL(Tactic_Owner_Global__c, &apos;Group&apos;) 
|| ISPICKVAL(Tactic_Owner_Global__c, &apos;Sierra Student Coalition&apos;) 
) 
&amp;&amp; ISBLANK(Parent_Chapter__c)</errorConditionFormula>
        <errorDisplayField>Parent_Chapter__c</errorDisplayField>
        <errorMessage>The Tactic Owner that is selected requires a Parent Club Entity/Team.</errorMessage>
    </validationRules>
</CustomObject>